--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </p> -->
         </div>
         <div class="home-hero__cta">
-          <a href="/resource/resume.pdf" class="btn btn--bg" download="">Download Resume</a>
+          <a href="/resource/Ahsanul's Resume.Analyst.pdf" class="btn btn--bg" download="">Download Resume</a>
         </div>
       </div>
       <div class="home-hero__socials">
